--- a/src/app/components/to-do-list/to-do-list.component.html
+++ b/src/app/components/to-do-list/to-do-list.component.html
@@ -1,21 +1,23 @@
 <div class="container">
+  <p class="app-name">TO DO LIST</p>
+
   <div class="title-container">
-      <mat-form-field appearance="fill">
+      <mat-form-field class="title" appearance="fill">
           <mat-label>What needs to be done?</mat-label>
           <input matInput [(ngModel)]="todoTitle">
       </mat-form-field>
   </div>
   <div class="status-and-priority">
-      <mat-form-field appearance="fill">
+      <mat-form-field  class="status" appearance="fill">
           <mat-label>Status</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="status">
-            <mat-option *ngFor="let status of todoStatuses" [value]="status.value">
+          <mat-select [(ngModel)]="selectedValue" name="status" [(ngModel)]="selected">
+            <mat-option *ngFor="let status of todoStatuses" [value]="status.value" ng-selected="to do">
                     {{status.viewValue}}
                 </mat-option>
           </mat-select>
         </mat-form-field>
         
-        <mat-form-field appearance="fill">
+        <mat-form-field class="priority" appearance="fill">
             <mat-label>Priority</mat-label>
             <mat-select [(ngModel)]="selectedValuePrior" name="priority">
                 <mat-option  *ngFor="let priority of todoPriorities" [value]="priority.value">
@@ -24,30 +26,30 @@
             </mat-select>
         </mat-form-field>
   </div>
-  <div class="desc-container">
-      <mat-form-field appearance="fill">
+  <div class="description-container">
+      <mat-form-field class="description" appearance="fill">
           <mat-label>Description</mat-label>
           <textarea matInput [(ngModel)]="todoDescription"></textarea>
       </mat-form-field>
   </div>
   <div class="date-container">
-      <mat-form-field appearance="fill">
+      <mat-form-field class="date" appearance="fill">
           <mat-label>Choose a date</mat-label>
-          <input matInput [matDatepicker]="picker">
+          <input matInput [matDatepicker]="picker" [(ngModel)]="todoDate">
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
   </div>
 
-<div>
-    <button mat-raised-button color="primary" (click)="addTodo()">ADD</button>
+<div class="button-add-container">
+    <button mat-raised-button color="primary" class="button-add" (click)="addTodo()">ADD</button>
 </div>
 
-<mat-card *ngFor="let todo of todos">
+<mat-card class="todos-container" *ngFor="let todo of todos">
     <div *ngIf="!todo.editing; else editingTodo">
         <mat-card-header>
-          <input type="text" [(ngModel)]="todo.title" (blur)="doneEdit(todo)" (keyup.enter)="doneEdit(todo)" (keyup.esc)="cancelEdit(todo)"autofocus>
-          <mat-card-title *ngIf="!todo.editing; else editingTodo" [ngClass]="{ 'completed' : todo.completed }" (dblclick)="editTodo(todo)">{{ todo.title }}</mat-card-title>
+          <input type="text" [(ngModel)]="todo.title"> 
+          <mat-card-title *ngIf="!todo.editing; else editingTodo" (click)="editTodo(todo)">{{ todo.title }}</mat-card-title>
           <mat-card-subtitle>PRIORITY: {{ todo.priority }}</mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
@@ -57,6 +59,9 @@
           <p>
             STATUS: {{ todo.status }} 
           </p>
+          <p>
+            Date: {{ todo.date }}
+          </p>
         </mat-card-content>
         <mat-card-actions>
           <button mat-raised-button color="primary" (click)="editTodo(todo)">EDIT</button>
@@ -64,3 +69,4 @@
         </mat-card-actions>
     </div>
 </mat-card>
+</div>
