--- a/src/app/components/to-do-list/to-do-list.component.html
+++ b/src/app/components/to-do-list/to-do-list.component.html
@@ -10,10 +10,10 @@
   <div class="status-and-priority">
       <mat-form-field  class="status" appearance="fill">
           <mat-label>Status</mat-label>
-          <mat-select [(ngModel)]="selectedValue" name="status" [(ngModel)]="selected">
-            <mat-option *ngFor="let status of todoStatuses" [value]="status.value" ng-selected="to do">
+          <mat-select [(ngModel)]="selectedValue" name="status">
+            <mat-option *ngFor="let status of todoStatuses" [value]="status.value">
                     {{status.viewValue}}
-                </mat-option>
+            </mat-option>
           </mat-select>
         </mat-form-field>
         
@@ -48,11 +48,11 @@
 <mat-card class="todos-container" *ngFor="let todo of todos">
     <div *ngIf="!todo.editing; else editingTodo">
         <mat-card-header>
-          <input type="text" [(ngModel)]="todo.title"> 
+          <!-- <input type="text" [(ngModel)]="todo.title">  -->
           <mat-card-title *ngIf="!todo.editing; else editingTodo" (click)="editTodo(todo)">{{ todo.title }}</mat-card-title>
           <mat-card-subtitle>PRIORITY: {{ todo.priority }}</mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content>
+        <mat-card-content class="content-app">
           <p>
             {{ todo.description }} 
           </p>
@@ -63,7 +63,7 @@
             Date: {{ todo.date }}
           </p>
         </mat-card-content>
-        <mat-card-actions>
+        <mat-card-actions class="actions-btn">
           <button mat-raised-button color="primary" (click)="editTodo(todo)">EDIT</button>
           <button mat-raised-button color="primary" (click)="deleteTodo(todo.id)">DELETE</button>
         </mat-card-actions>
