--- a/src/app/components/to-do-list/to-do-list.component.scss
+++ b/src/app/components/to-do-list/to-do-list.component.scss
@@ -22,6 +22,7 @@
             }
         }
     }
+
     .status-and-priority{
         display: flex;
         justify-content: space-between;
@@ -37,6 +38,7 @@
             }
         }
     }
+
     .description-container,
     .date-container{
         .description,
@@ -57,11 +59,18 @@
             }
         }
     }  
+    
     .todos-container{
         width: 40vw;
         margin-bottom: 2em;
+
         @include mobile{
             width: 80vw; 
+        }
+
+        .content-app,
+        .actions-btn{
+            padding-left: 2em;
         }
     }
 }
